--- a/src/linkTreeStyle.css
+++ b/src/linkTreeStyle.css
@@ -56,3 +56,10 @@ button {
 a {
     text-decoration: none; 
 }
+
+@media screen and (max-width: 768px) {
+    button {
+      width: 343px;
+      height: 68px;
+    }
+}
